ALF-1697 Навигация в главном меню редактора отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5857 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -148,3 +148,15 @@ div[id*="report-settings"] .yui-skin-lecmTheme .yui-panel div.form-field textare
 #bd #lecm-content-main div[id*="report-settings"] div[id*="reportForm"]{
     margin:0 5px;
 }
+
+#no_menu_page #bd #lecm-page {
+    margin-left: 5px;
+}
+
+#bd #lecm-content-main #editor-with-tree {
+     margin: 5px;
+ }
+
+#bd #lecm-content-main #reports-editor-tree {
+    margin: 0 5px;
+}
