ALF-1730: При загрузке файла с длинным названием верстка на форме "Обновить файл" слетает
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5863 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2612,3 +2612,7 @@ div.form-field table.formFieldControlParamsTable {
 	padding-left: 160px;
 	width: 520px;
 }
+
+.yui-panel-container .html-upload input[type="file"] {
+	width: 100%;
+}
