--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-doc-tree/doc_Errands.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-doc-tree/doc_Errands.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="stages" pageWidth="802" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="d43b5407-4737-4ac0-bee4-61002abdb547">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="stages" pageWidth="800" pageHeight="595" orientation="Landscape" whenNoDataType="BlankPage" columnWidth="800" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="d43b5407-4737-4ac0-bee4-61002abdb547">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -13,17 +13,17 @@
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["/reportdefinitions/deploy/jasper/exec-doc-tree/"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="errand_Level" class="java.lang.Number" isForPrompting="false">
-		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
+	<parameter name="levelIndent" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["     "]]></defaultValueExpression>
 	</parameter>
 	<field name="col_Name" class="java.lang.String">
 		<fieldDescription><![CDATA[Название]]></fieldDescription>
 	</field>
 	<field name="col_SubErrands" class="java.util.List"/>
 	<detail>
-		<band height="30" splitType="Stretch">
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="a2fb6c46-3698-467e-8c14-9b06e12fd228" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="802" height="30" isPrintWhenDetailOverflows="true"/>
+		<band height="40" splitType="Stretch">
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="a2fb6c46-3698-467e-8c14-9b06e12fd228" stretchType="RelativeToTallestObject" x="0" y="0" width="800" height="40" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -32,15 +32,18 @@
 					<rightPen lineWidth="0.5" lineColor="#78C0D4"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans Mono"/>
-					<paragraph firstLineIndent="30"/>
+					<font fontName="Times New Roman" size="12"/>
+					<paragraph firstLineIndent="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{col_Name} != null ? $F{col_Name} : "Не задано"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{levelIndent} + ($F{col_Name} != null ? $F{col_Name} : "Не задано")]]></textFieldExpression>
 			</textField>
 		</band>
-		<band height="30">
+		<band height="40">
 			<subreport isUsingCache="true">
-				<reportElement uuid="d6b8a8a1-d8f9-45ac-b5c4-d4aadd8a996f" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="802" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="d6b8a8a1-d8f9-45ac-b5c4-d4aadd8a996f" stretchType="RelativeToTallestObject" mode="Transparent" x="0" y="0" width="800" height="40" isRemoveLineWhenBlank="true"/>
+				<subreportParameter name="levelIndent">
+					<subreportParameterExpression><![CDATA[$P{levelIndent} + "       "]]></subreportParameterExpression>
+				</subreportParameter>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{col_SubErrands},false)]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "doc_Errands.jasper"]]></subreportExpression>
 			</subreport>
