--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-discipline/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-discipline/approval-discipline.jrxml
@@ -4,10 +4,10 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="dataSource" value="ru.it.lecm.contracts.reports.DSProdiverApprovalSummaryByPeriod"/>
-	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
+	<style name="styleOdd" mode="Opaque" backcolor="#FFFFFF">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
-			<style backcolor="#E2DFD6"/>
+			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<style backcolor="#D2EAF1"/>
 		</conditionalStyle>
 	</style>
 	<parameter name="periodDate_lo" class="java.util.Date" isForPrompting="false"/>
@@ -63,7 +63,9 @@
 					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251"/>
 					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
-				<textFieldExpression><![CDATA["за период"+ ($P{periodDate_lo} != null ? msg( " с {0,date,short}", $P{periodDate_lo}) : "") + ($P{periodDate_hi} != null ? msg( " по {0,date,short}", $P{periodDate_hi}) : "")]]></textFieldExpression>
+				<textFieldExpression><![CDATA[($P{periodDate_lo} != null || $P{periodDate_hi} != null ? "за период" : "") +
+($P{periodDate_lo} != null ? msg( " с {0,date,short}", $P{periodDate_lo}) : "") +
+($P{periodDate_hi} != null ? msg( " по {0,date,short}", $P{periodDate_hi}) : "")]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
@@ -165,7 +167,7 @@
 		<band height="30" splitType="Immediate">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" mode="Opaque" x="0" y="0" width="186" height="30" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" style="styleOdd" mode="Opaque" x="0" y="0" width="186" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -180,7 +182,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" mode="Opaque" x="371" y="0" width="183" height="30" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" style="styleOdd" mode="Opaque" x="371" y="0" width="183" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -195,7 +197,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.Unit}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" mode="Opaque" x="186" y="0" width="185" height="30" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" style="styleOdd" mode="Opaque" x="186" y="0" width="185" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -210,7 +212,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.StaffPosition}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" mode="Opaque" x="554" y="0" width="88" height="30" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" style="styleOdd" mode="Opaque" x="554" y="0" width="88" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -225,7 +227,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" mode="Opaque" x="642" y="0" width="80" height="30" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" style="styleOdd" mode="Opaque" x="642" y="0" width="80" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -240,7 +242,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.AvgApproved}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" mode="Opaque" x="722" y="0" width="80" height="30" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" style="styleOdd" mode="Opaque" x="722" y="0" width="80" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
