--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contracts-list/contracts-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contracts-list/contracts-list.jrxml
@@ -4,10 +4,10 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="dataSource" value="ru.it.lecm.contracts.reports.DSProviderReestrDogovorov"/>
-	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
+	<style name="styleOdd" mode="Opaque" backcolor="#FFFFFF">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
-			<style backcolor="#E2DFD6"/>
+			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<style backcolor="#D2EAF1"/>
 		</conditionalStyle>
 	</style>
 	<queryString>
@@ -199,7 +199,7 @@
 	<detail>
 		<band height="26" splitType="Prevent">
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" stretchType="RelativeToTallestObject" x="200" y="0" width="110" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" style="styleOdd" stretchType="RelativeToTallestObject" x="200" y="0" width="110" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -214,7 +214,7 @@
 				<textFieldExpression><![CDATA[$F{col_DocKind}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToTallestObject" x="105" y="0" width="95" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" style="styleOdd" stretchType="RelativeToTallestObject" x="105" y="0" width="95" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -233,7 +233,7 @@
 	: ", тел. " + $F{col_Contragent.phone})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" stretchType="RelativeToTallestObject" x="0" y="0" width="30" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" style="styleOdd" stretchType="RelativeToTallestObject" x="0" y="0" width="30" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -248,7 +248,7 @@
 				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToTallestObject" x="30" y="0" width="75" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" style="styleOdd" stretchType="RelativeToTallestObject" x="30" y="0" width="75" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -263,7 +263,7 @@
 				<textFieldExpression><![CDATA[( ($F{col_Regnum} != null && !"Не присвоено".equals($F{col_Regnum}) )? $F{col_Regnum} : "не присвоен")]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" stretchType="RelativeToTallestObject" x="310" y="0" width="148" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" style="styleOdd" stretchType="RelativeToTallestObject" x="310" y="0" width="148" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -278,7 +278,7 @@
 				<textFieldExpression><![CDATA[$F{col_Theme} != null ? $F{col_Theme} : ""]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" stretchType="RelativeToTallestObject" x="458" y="0" width="68" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" style="styleOdd" stretchType="RelativeToTallestObject" x="458" y="0" width="68" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -293,7 +293,7 @@
 				<textFieldExpression><![CDATA[$F{col_DateStart}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="7fe3fbca-e8e2-431c-b0d1-35a9f6eba3e9" stretchType="RelativeToTallestObject" x="526" y="0" width="68" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="7fe3fbca-e8e2-431c-b0d1-35a9f6eba3e9" style="styleOdd" stretchType="RelativeToTallestObject" x="526" y="0" width="68" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -308,7 +308,7 @@
 				<textFieldExpression><![CDATA[$F{col_DateEnd}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" stretchType="RelativeToTallestObject" x="594" y="0" width="96" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" style="styleOdd" stretchType="RelativeToTallestObject" x="594" y="0" width="96" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -323,7 +323,7 @@
 				<textFieldExpression><![CDATA[($F{col_Executor} == null ? "" : $F{col_Executor})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" stretchType="RelativeToTallestObject" x="690" y="0" width="112" height="26" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" style="styleOdd" stretchType="RelativeToTallestObject" x="690" y="0" width="112" height="26" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
