--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-orgunit/exec-discipline-by-orgunit.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-orgunit/exec-discipline-by-orgunit.jrxml
@@ -7,7 +7,7 @@
 	<style name="styleOdd" mode="Opaque" backcolor="#FFFFFF">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
-			<style backcolor="#DCDCDC"/>
+			<style backcolor="#D2EAF1"/>
 		</conditionalStyle>
 	</style>
 	<parameter name="CMIS_URL" class="java.lang.String" isForPrompting="false">
@@ -255,7 +255,7 @@
 					<font fontName="Times New Roman" size="12" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[($F{Col_Count_Total} != null ? $F{Col_Count_Total} : "0")
-+ "("
++ " ("
 	+ ($F{Col_Count_Total_Important} != null ? $F{Col_Count_Total_Important} : "0")
 + ")"]]></textFieldExpression>
 			</textField>
@@ -272,7 +272,7 @@
 					<font fontName="Times New Roman" size="12" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[($F{Col_Count_Closed} != null ? $F{Col_Count_Closed} : "0")
-+ "("
++ " ("
 	+ ( $F{Col_Count_Closed_important} != null ? $F{Col_Count_Closed_important} : "0")
 + ")"]]></textFieldExpression>
 			</textField>
@@ -335,7 +335,7 @@
 	? msg( "{0,number,percent}", 1.0*$F{Col_Count_Important_Refused}/$F{Col_Count_Total_Important})
 	: "0"
 )
-+ "("
++ " ("
 	+ ($F{Col_Count_Important_Refused} != null	? $F{Col_Count_Important_Refused} : "0")
 + ")"]]></textFieldExpression>
 			</textField>
