ALF-1738: компонент выбора нескольких сотрудников из оргструктуры - неверное отображение сведений о доступности
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5884 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2031,15 +2031,18 @@ div.object-finder .association-auto-complete-selected-item {
 }
 
 div.object-finder .association-auto-complete-selected-item .employee-available,
-div.object-finder .association-auto-complete-selected-item .employee-unavailable {
+div.object-finder .association-auto-complete-selected-item .employee-unavailable,
+div.object-finder .association-auto-complete-selected-item-even .employee-available,
+div.object-finder .association-auto-complete-selected-item-even .employee-unavailable {
     width: 16px;
     height: 16px;
     margin-left: 5px;
     position: absolute;
-    top: 6px;
+	margin-top: 3px;
 }
 
-div.object-finder .association-auto-complete-selected-item .employee-available {
+div.object-finder .association-auto-complete-selected-item .employee-available,
+div.object-finder .association-auto-complete-selected-item-even .employee-available {
     background: url(images/employee-available.png) no-repeat;
 }
 
