Редактор Отчетов - заменена иконка для действия "Развернуть"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5923 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -105,7 +105,7 @@ div[id*="reports-editor-navigation-toolbar"] .toolbar
 }
 
 .datagrid .onActionDeploy a {
-    background-image: url("../../images/lecm-base/components/base/alf_base_osnovnaya_16.png");
+    background-image: url("/share/res/images/lecm-reports-editor/deploy-report_16.png");
 }
 
 .datagrid .onActionUnDeploy a {
