[~]разные небольшие доработки по Редактору Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5927 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -598,9 +598,14 @@ h4 .lighter
     clear: both;
 }
 
-.yui-skin-lecmTheme .yui-panel div.form-field input[type='text']{
+.yui-skin-lecmTheme .yui-panel div.form-field input[type='text'],
+.yui-skin-lecmTheme .yui-panel div.form-field select {
     height: 28px;
     padding: 2px;
+}
+
+.yui-skin-lecmTheme .yui-panel div.form-field select[multiple='multiple'] {
+    height: 100%;
 }
 .yui-skin-lecmTheme .yui-panel div.form-field input[type='checkbox'] {
     vertical-align: middle;
