ALF-1714  На форме "Изменение атрибутов документа", рядом с полем "Контрагент" кнопка выбора контрагента и создание нового контрагента смещены относительно поля ALF-1703 Поползла верстка формы просмотра основных сведений договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5971 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
@@ -104,3 +104,7 @@
 .yui-skin-lecmTheme div.metadata-form-edit .form-fields .yui-content .tab-contract-stages .form-field.with-grid .datagrid div.grid td.yui-dt-col-assoc_lecm-contract-table-structure_attachments-temp-assoc div img {
     margin-right: 3px;
 }
+
+.yui-skin-lecmTheme div[id*="-view-repsesentative"] {
+    margin-left: 25px;
+}
