--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -34,9 +34,16 @@
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.viewmode-field span.viewmode-value .association-auto-complete-selected-item-even {
     overflow: hidden;
 }
-.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field input[type=text],
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field input[type=text]:not(.autocomplete-input),
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.selectone-control select,
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block div.autocompleteCurrentValueDisplayInvisible {
+    width: 200px;
+    overflow: hidden;
+}
+
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field input[type=text][id*="errands"]:not(.date-entry):not(.autocomplete-input),
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.selectone-control[id*="errands"] select,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block div.autocompleteCurrentValueDisplayInvisible[id*="errands"] {
     width: 225px;
     overflow: hidden;
 }
@@ -58,11 +65,11 @@
     margin-bottom: 0;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder .current-values {
-    width: 590px;
+    width: 80%;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder .show-picker,
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block div.show-picker {
-    float: right;
+    float: left;
     margin-right: 7px;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.yui-g div.yui-u div.form-field div.autocomplete-block div.show-picker {
@@ -77,7 +84,7 @@
     text-overflow: ellipsis;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.set > div.form-field > div > select {
-    width: 639px;
+    width: 80%;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.set > div.form-field > div > input[type=text]:not(.date-entry) {
     width: 675px !important;
