[~] форма для поручений - соисполнители
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5972 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1979,7 +1979,8 @@ div.currentValueDisplay {
 
 .yui-skin-lecmTheme .yui-panel div.form-field div.autocompleteCurrentValueDisplay,
 .yui-skin-lecmTheme .yui-panel div.form-field div.autocompleteCurrentValueDisplayInvisible {
-    width: 463px;
+    width: 400px;
+    margin-left:40px;
     padding: 0;
 }
 
