[~] небольшие правки в стилях (формы отчетности + редактирование документов)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5975 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1984,6 +1984,11 @@ div.currentValueDisplay {
     padding: 0;
 }
 
+.yui-skin-lecmTheme .yui-panel div[id*="reportForm"] div.form-field div.autocompleteCurrentValueDisplay,
+.yui-skin-lecmTheme .yui-panel div[id*="reportForm"] div.form-field div.autocompleteCurrentValueDisplayInvisible {
+    margin-left: 0px;
+}
+
 .yui-skin-lecmTheme .yui-panel div.yui-navset div.form-field div.autocompleteCurrentValueDisplay,
 .yui-skin-lecmTheme .yui-panel div.yui-navset div.form-field div.autocompleteCurrentValueDisplayInvisible {
     width: 28em;
