Список моделей: добавлена возможность просмотра списка типов в модели с переходом к редактору форм
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5981 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
+++ b/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
@@ -24,6 +24,16 @@
    background: transparent url(/share/res/images/lecm-model-list/statemachine_edit.png) no-repeat scroll center center;
    cursor: pointer;
 }
+.models .yui-dt-liner a.expand
+{
+   background: transparent url(/share/res/images/lecm-model-list/expand.png) no-repeat scroll center center;
+   cursor: pointer;
+}
+.models .yui-dt-liner a.collapse
+{
+   background: transparent url(/share/res/images/lecm-model-list/collapse.png) no-repeat scroll center center;
+   cursor: pointer;
+}
 .models .yui-dt-liner a
 {
    background-position: 0 center;
