--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -2,9 +2,11 @@
     width: 330px;
     min-height: 102px;
     margin: 0 30px 0 0;
-    float: left;
     padding: 0 !important;
     border: 1px solid #666;
+}
+.yui-panel .dnd-uploader ul.attachments-list {
+	float: left;
 }
 .dnd-uploader ul.attachments-list li img {
     margin: 0 5px;
