ALF-1723: Просмотр вложения на форме задачи
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6051 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2625,3 +2625,7 @@ div.form-field table.formFieldControlParamsTable {
 .yui-panel-container .html-upload input[type="file"] {
 	width: 100%;
 }
+
+.document-preview-cntrol .preview-select {
+	padding-bottom: 10px;
+}
