[~]lдоработки базовой страницы со списком документов - использование меню по умолчанию(список, отчеты, архив)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6061 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/lecm-documents/documents-list.css
+++ b/lecm-documents/share/src/main/webapp/css/lecm-documents/documents-list.css
@@ -23,3 +23,7 @@
     background-image: url("/share/res/images/lecm-contracts/alf_contract_add.png");
 }
 
+#bd #lecm-menu #menu-buttons.documents-menu-buttons span.menu-button span.first-child {
+    height: 68px;
+}
+
